2000-03-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/defaults.h (DEFAULT_MODULE_TIMEOUT):
	increased module timeout to 30 seconds

2000-03-25  Mikhael Goikhman  <migo@homemail.com>

	* configure.in: removed duplicated checks for libxpg4 and Xsetlocale,
	added X_CFLAGS to stroke check to fix header detection

	* fvwm/bindings.c (ParseBinding): patch by Olivier, remove the
	old binding first; this fixes memory leaks and an eventual crash

2000-03-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (movecursor):
	fixed MoveCursor command with Xinerama

	* fvwm/functions.c (func_config):
	* libs/Module.h:
	* libs/Module.c (SetNoGrabMask):
	introduced SET_NOGRAB_MASK command to specify the packets that are not
	sent to the module while the server is grabbed and transmission is in
	locked mode; the mask must be a subset of the SET_SYNC_MASK mask.
	fixes problem that icons forget iconified state during recapture or
	when applications start up iconic

2000-03-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed random placement offsets

	* fvwm/add_window.c (GetWindowSizeHints):
	suppress broken size hints warning with zero size increment and
	identical max and min values

	* fvwm/events.c (HandleEnterNotify):
	(HandleLeaveNotify):
	* fvwm/move_resize.c (InteractiveMove):
	(resize_window):
	* fvwm/screen.h (ScreenInfo):
	Ignore LeaveNotify and EnterNotify events while the wire frame is
	visible.  This may have unwanted effects on the window list; perhaps
	only if the mouse is not grabbed on the window, e.g. if the motion was
	invoked via a key.

2000-03-08  olicha  <olivier.chapuis@free.fr>

	* AUTHORS: update my entries for my ego :)

2000-02-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (CreateIconWindow):
	(RedoIconName):
	(Iconify):
	fixed NoIconTitle core dump

2000-02-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* ChangeLog:
	removed trash entries

	* configure.in: